Test fix 2: position sticky on ios

--- a/stylesheets/navigation.css
+++ b/stylesheets/navigation.css
@@ -23,7 +23,6 @@
     text-align: center;
     padding: 0;
     margin: 0;
-    top: 0;
 }
 
 #menu-bar li {
@@ -48,7 +47,6 @@
     border-bottom: 0.5px solid #57CBF9;
 }
 
-
 @media screen and (max-width: 768px) {
     #menu-bar {
         margin-bottom: -54px;
@@ -59,7 +57,6 @@
     }
     
     #menu-bar ul {
-        overflow: hidden;
         background: #002B51;
         display: none;
     }
